# adc

./: .gitignore  CMakeLists.txt  Calibrator.cpp  Calibrator.h  Configuration.cpp  Configuration.h  Debug.cpp  Debug.h  ESCController.cpp  ESCController.h  FusionFilter.cpp  FusionFilter.h  GY87Test  GY87Test.cpp  Notes.txt  PID.cpp  PID.h  README.md  RTMath.cpp  RTMath.h  Status.h  adc.cpp  altFilter.cpp  altFilter.h  calibrator.cpp  calibrator.h  config.cpp  config.h  config.txt  debug.cpp  debug.h  gy87Calibrate.cpp  main.cpp  pid.cpp  pid.h  status.h
sensors/: .GY87.cpp.swp  .GY87.h.swp  CMakeLists.txt  GY87.cpp  GY87.h  HMC5883L.cpp  I2Cdev.h  MPU6050.cpp  MPU6050.h  MPU6050_6Axis_MotionApps20.cpp  MPU6050_6Axis_MotionApps20.h  hcsr04.c  sensors.h
ukf/: CMakeLists.txt  config.h  dynamics.cpp  dynamics.h  sensors.cpp  sensors.h  state.cpp  state.h  types.h  ukf.cpp
